flex-wrap added on filters/new posts bar to avoid overflow on smaller screens

--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -47,6 +47,7 @@
 .newPostDiv {
   margin: 1rem 0rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   padding: 0 10%;
   align-items: center;
@@ -55,6 +56,7 @@
 
 .filters {
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
